--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -44,5 +44,5 @@ jobs:
       uses: brandedoutcast/publish-nuget@v2.5.2
       with:
           PROJECT_FILE_PATH: Muddle.Domain/Muddle.Domain.csproj
-          NUGET_KEY: ${{secrets.NUGET_PUBLISH_API_KEY}}:
+          NUGET_KEY: ${{secrets.NUGET_PUBLISH_API_KEY}}
 
