--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -45,4 +45,5 @@ jobs:
       with:
           PROJECT_FILE_PATH: Muddle.Domain/Muddle.Domain.csproj
           NUGET_KEY: ${{secrets.NUGET_PUBLISH_API_KEY}}
+          VERSION_FILE_PATH: Build/muddle.props
 
