Add publishing of web nuget

--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -47,3 +47,10 @@ jobs:
           NUGET_KEY: ${{secrets.NUGET_PUBLISH_API_KEY}}
           VERSION_FILE_PATH: Build/muddle.props
 
+    # Publish to Nuget:
+    - name: Publish Muddle.Web
+      uses: brandedoutcast/publish-nuget@v2.5.2
+      with:
+          PROJECT_FILE_PATH: Muddle.Web/Muddle.Web.csproj
+          NUGET_KEY: ${{secrets.NUGET_PUBLISH_API_KEY}}
+          VERSION_FILE_PATH: Build/muddle.props
