--- a/Muddle.Web/Muddle.Web.csproj
+++ b/Muddle.Web/Muddle.Web.csproj
@@ -1,10 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <Import Project="../Build/muddle.props" />
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <CopyRefAssembliesToPublishDirectory>false</CopyRefAssembliesToPublishDirectory>
+    <PackageId>Muddle</PackageId>
+    <Description>Development Learning Environment for MUD games</Description>
   </PropertyGroup>
 
   <ItemGroup>
