--- a/Muddle.Web/Muddle.Web.csproj
+++ b/Muddle.Web/Muddle.Web.csproj
@@ -7,6 +7,7 @@
     <CopyRefAssembliesToPublishDirectory>false</CopyRefAssembliesToPublishDirectory>
     <PackageId>Muddle</PackageId>
     <Description>Development Learning Environment for MUD games</Description>
+    <IsPackable>true</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
