--- a/Muddle.AspNetCore/Muddle.AspNetCore.csproj
+++ b/Muddle.AspNetCore/Muddle.AspNetCore.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <Import Project="../Build/muddle.props" />
 
@@ -6,6 +6,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <OutputType>Library</OutputType>
     <IsPackable>true</IsPackable>
+    <AssemblyName>Muddle</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
