--- a/Muddle.AspNetCore/Muddle.AspNetCore.csproj
+++ b/Muddle.AspNetCore/Muddle.AspNetCore.csproj
@@ -7,6 +7,7 @@
     <OutputType>Library</OutputType>
     <IsPackable>true</IsPackable>
     <AssemblyName>Muddle</AssemblyName>
+    <Description>Development Learning Environment for MUD games</Description>
   </PropertyGroup>
 
   <ItemGroup>
