Add content files to nuget package

--- a/Muddle.AspNetCore/Muddle.AspNetCore.csproj
+++ b/Muddle.AspNetCore/Muddle.AspNetCore.csproj
@@ -14,4 +14,9 @@
     <ProjectReference Include="..\Muddle.Domain\Muddle.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\muddle\css\" />
+    <Folder Include="wwwroot\muddle\js\" />
+  </ItemGroup>
+
 </Project>
