Move all icons to nuget package

--- a/Muddle.AspNetCore/Muddle.AspNetCore.csproj
+++ b/Muddle.AspNetCore/Muddle.AspNetCore.csproj
@@ -15,8 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\muddle\css\" />
-    <Folder Include="wwwroot\muddle\js\" />
+    <Folder Include="wwwroot\css\" />
+    <Folder Include="wwwroot\js\" />
   </ItemGroup>
 
 </Project>
