--- a/Muddle.AspNetCore/Muddle.AspNetCore.csproj
+++ b/Muddle.AspNetCore/Muddle.AspNetCore.csproj
@@ -1,22 +1,17 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
-  <Import Project="../Build/muddle.props" />
-
-  <PropertyGroup>
+	<Import Project="../Build/muddle.props" />
+	
+	<PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <OutputType>Library</OutputType>
-    <IsPackable>true</IsPackable>
+    <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
+    <PackageId>Muddle</PackageId>
     <AssemblyName>Muddle</AssemblyName>
-    <Description>Development Learning Environment for MUD games</Description>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Muddle.Domain\Muddle.Domain.csproj" />
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="wwwroot\css\" />
-    <Folder Include="wwwroot\js\" />
-  </ItemGroup>
 
 </Project>
