--- a/.github/workflows/pipeline-test.yml
+++ b/.github/workflows/pipeline-test.yml
@@ -1,10 +1,7 @@
-name: CI CD to Azure
+name: Pipeline Test
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
 
 env:
   AZURE_WEBAPP_NAME: muddle
